[project]
name = "pfa_aws_utils"
version = "0.0.1"
description = "Utilities to interact with my AWS resources"
authors = [
  { name = "Pedro F. Angelini", email = "pedro.angelini@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>1.26",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pfa_aws_utils", "pfa_aws_utils.s3"]

[tool.setuptools.packages.find]
include = ["pfa_aws_utils*"]
exclude = ["docs*", "tests*", "scrap*"]

[project.urls]
"Homepage" = "https://github.com/pedroangelini/aws_utils"
